fix: correct path aliases for src/lib

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -51,12 +51,10 @@
   },
 
   /* Include these files in the compilation context */
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts"
-  ],
+"paths": {
+  "@/*": ["*"]
+}
+,
 
   /* Exclude node_modules (and build output) */
   "exclude": ["node_modules"]
